# kmid

./: Makefile  README.md
src/: CMakeLists.txt  ConfigureChecks.cmake  audiomidi.desktop  channel.cpp  channel.h  channel3d.cpp  channel3d.h  channel4d.cpp  channel4d.h  channelcfgdlg.cpp  channelcfgdlg.h  channelview.cpp  channelview.h  collectdlg.cpp  collectdlg.h  config.h.cmake  history.txt  kdisptext.cpp  kdisptext.h  klcdnumber.cpp  klcdnumber.h  kmid.desktop  kmid_part.cpp  kmid_part.h  kmidbutton.h  kmidclient.cpp  kmidclient.h  kmidframe.cpp  kmidframe.h  ktrianglebutton.cpp  ktrianglebutton.h  main.cpp  midicfgdlg.cpp  midicfgdlg.h  org.kde.KMid.xml  qslidertime.cpp  qslidertime.h  randomlist.cpp  randomlist.h  rhythmview.cpp  (+5 more)
src/doc/: index.docbook
src/libkmid/: CMakeLists.txt  alsaout.cc  deviceman.cc  deviceman.h  gusout.cc  libkmid.h  midfile.cc  midfile.h  midimapper.cc  midimapper.h  mt32togm.h  notearray.cc  notearray.h  player.cc  player.h  track.cc
src/libkmid/tests/: CMakeLists.txt
src/maps/: CMakeLists.txt
src/pics/: CMakeLists.txt
src/po/: CMakeLists.txt
src/po/af/: kmid.po
src/po/ar/: kmid.po
src/po/be/: kmid.po
src/po/bg/: kmid.po
src/po/br/: kmid.po
src/po/ca/: kmid.po
src/po/cs/: kmid.po
src/po/cy/: kmid.po
src/po/da/: kmid.po
src/po/de/: kmid.po
src/po/el/: kmid.po
src/po/en_GB/: kmid.po
src/po/eo/: kmid.po
src/po/es/: kmid.po
src/po/et/: kmid.po
src/po/eu/: kmid.po
src/po/fa/: kmid.po
src/po/fi/: kmid.po
src/po/fr/: kmid.po
src/po/ga/: kmid.po
src/po/gl/: kmid.po
src/po/hr/: kmid.po
src/po/hu/: kmid.po
src/po/is/: kmid.po
src/po/it/: kmid.po
src/po/ja/: kmid.po
src/po/kk/: kmid.po
(+31 files in other folders)
